--- a/welcome.html
+++ b/welcome.html
@@ -20,9 +20,9 @@
             <i class="child2"  style="color: #ff0057"></i>
             <i class="child3" style="color: #ff0057"></i>
             <div class="login">
-            <h2 class="text-center">Welcome</h2>
-            <h2 class="p-1 text-center"  id="demo"  ></h2>
-            <button id="btn2" class="btn btn-outline-warning px-5 py-2 rounded-5 ms-3 position-relative">Logout</button>
+            <h2 class="text-center">Happy New Year 2024</h2>
+            <h2 class="p-1 text-center"  id="demo"></h2>
+            <button id="btn2" class="btn btn-outline-warning px-5 py-2 rounded-5 position-relative">Logout</button>
     </section>
 
 
